# streamlit_chunking

./: .gitignore  Dockerfile  README.md  app.py  backend.py  index.html  main.py  pyproject.toml  requirements.txt  script.js  styles.css
.history/: .gitignore_20251006084911  .gitignore_20251007115251  .gitignore_20251009100058  README_20251006230922.md  README_20251007112525.md  README_20251007112637.md  README_20251007112648.md  README_20251009104904.md  README_20251009105017.md  README_20251009105028.md  app_20251002231427.py  app_20251002231437.py  app_20251002231450.py  app_20251002233926.py  app_20251006080212.py  app_20251006080222.py  app_20251006081024.py  app_20251006081844.py  app_20251006082731.py  app_20251006082749.py  app_20251006083054.py  app_20251006083108.py  app_20251006083115.py  app_20251006083136.py  app_20251006083208.py  app_20251006231700.py  app_20251006232817.py  app_20251006232846.py  app_20251006233955.py  app_20251006234437.py  app_20251006235009.py  app_20251006235959.py  app_20251007000233.py  app_20251007000626.py  app_20251007001102.py  app_20251007001111.py  app_20251007002444.py  app_20251007003405.py  app_20251007004318.py  app_20251007004442.py  (+423 more)
.history/docs/: README_20251009095958.md
.history/scripts/: cleanup_20251009100058.py  setup_20251009095736.py
.history/src/: __init___20251009094753.py
.history/src/api/: __init___20251009100057.py  main_20251009100058.py  main_20251009101329.py  main_20251009102654.py  main_20251009104223.py  middleware_20251009104052.py
.history/src/api/routes/: __init___20251009094758.py  database_20251009095153.py  database_20251009101607.py  export_20251009095220.py  export_20251009101607.py  openai_20251009101316.py  processing_20251009100058.py  processing_20251009101226.py  retrieval_20251009095202.py  retrieval_20251009101246.py
.history/src/config/: __init___20251009100057.py  logging_20251009094841.py  settings_20251009094838.py
.history/src/core/: __init___20251009100057.py  chunking_20251009100057.py  chunking_20251009100905.py  chunking_20251009104223.py  database_20251009095107.py  database_20251009101110.py  database_20251009103310.py  database_20251009103321.py  embedding_20251009094957.py  embedding_20251009100941.py  pipelines_20251009095056.py  pipelines_20251009101607.py  pipelines_20251009102539.py  preprocessing_20251009094932.py  preprocessing_20251009100841.py  retrieval_20251009095030.py  retrieval_20251009101607.py  storage_20251009100058.py  storage_20251009101607.py
.history/src/models/: __init___20251009100057.py  schemas_20251009100057.py
.history/src/ui/: __init___20251009094805.py  app_20251009095243.py  app_20251009101607.py
.history/src/ui/components/: __init___20251009100057.py  database_config_20251009095358.py  database_config_20251009100058.py  deep_config_20251009100058.py  deep_config_20251009102925.py  file_upload_20251009095342.py  processing_config_20251009095510.py  results_display_20251009095419.py  results_display_20251009102948.py  sidebar_20251009095330.py  sidebar_20251009104223.py
.history/src/utils/: file_utils_20251009094856.py  text_utils_20251009100058.py
.history/tests/: conftest_20251009095759.py  conftest_20251009095810.py
.history/tests/integration/: __init___20251009100057.py  test_api_20251009095913.py  test_pipelines_20251009095931.py
.history/tests/unit/: test_chunking_20251009100058.py  test_preprocessing_20251009095820.py  test_storage_20251009095900.py
docs/: API.md  USAGE.md
src/api/routes/: health.py
src/core/: embedding.py
src/ui/components/: database_config.py  file_upload.py  processing_config.py
src/ui/utils/: session_state.py  styling.py
src/utils/: __init__.py  file_utils.py  validation.py
tests/: __init__.py
tests/unit/: __init__.py  test_embedding.py
(+5 files in other folders)
